We now have builder working on the tools, not just cross-tools. Updates to allow jinja templates to be extended.

--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -20,7 +20,7 @@ export CLFS_TARGET="aarch64-unknown-linux-musl"
 export CLFS_ARCH="arm64"
 export CLFS_CFLAGS=""
 export MAKEFLAGS="-j$(nproc) -l$(nproc)"
-
 unset CFLAGS CXXFLAGS
+{% block env %}{% endblock %}
 {{build_steps}}
 EOF
