Add new 'arch' first argument to builder, which uses the arch you specify, which sources yaml from arch/x86-64bit.yaml, for example:
bin/builder x86-64bit cross_tools
bin/builder x86-64bit tools

--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -17,9 +17,9 @@ rm -rf "${CLFS}"/build/*
 {{unpack}}
 export LC_ALL=POSIX
 export CLFS_HOST=$(echo ${MACHTYPE} | sed -e 's/-[^-]*/-cross/')
-export CLFS_TARGET="aarch64-unknown-linux-musl"
-export CLFS_ARCH="arm64"
-export CLFS_CFLAGS=""
+export CLFS_TARGET="{{target}}"
+export CLFS_ARCH="{{arch}}"
+export CLFS_CFLAGS="{{cflags}}"
 export MAKEFLAGS="-j$(nproc) -l$(nproc)"
 unset CFLAGS CXXFLAGS
 {% block env %}{% endblock %}
