Attempted fix for CLFS_TARGET.

--- a/templates/fchroot.tmpl
+++ b/templates/fchroot.tmpl
@@ -9,6 +9,7 @@ set -x
 umask 022
 rm -rf /build/*
 {{unpack}}
+export CLFS_TARGET={{target}}
 export LC_ALL=POSIX
 export MAKEFLAGS="-j$(nproc) -l$(nproc)"
 unset CFLAGS CXXFLAGS
