--- a/templates/tools.tmpl
+++ b/templates/tools.tmpl
@@ -7,5 +7,5 @@ export AS="${CLFS_TARGET}-as"
 export RANLIB="${CLFS_TARGET}-ranlib"
 export LD="${CLFS_TARGET}-ld"
 export STRIP="${CLFS_TARGET}-strip"
-export DYNAMIC_LINKER=$(eval echo "${CLFS}/tools/lib/ld-musl-*.so.1")
+export DYNAMIC_LINKER=$(eval echo "${CLFS}/tools/lib/ld-*.so.1")
 {% endblock %}
