Fix for new CI, reintroduce removed CLFS variable definition.

--- a/templates/stage1.tmpl
+++ b/templates/stage1.tmpl
@@ -6,6 +6,8 @@ else
 	sudo_exe=""
 fi
 exec $sudo_exe fchroot ${CLFS} /bin/bash --login << "EOF"
+# CLFS is still needed for sources unpacking:
+export CLFS=/
 set -e
 set -o pipefail
 set -u
