--- a/templates/stage1.tmpl
+++ b/templates/stage1.tmpl
@@ -7,6 +7,7 @@ else
 fi
 exec $sudo_exe fchroot ${CLFS} /bin/bash --login << "EOF"
 # CLFS is still needed for sources unpacking:
+source /etc/profile
 export CLFS=/
 set -e
 set -o pipefail
