--- a/templates/stage1.tmpl
+++ b/templates/stage1.tmpl
@@ -15,6 +15,7 @@ set -x
 umask 022
 rm -rf /build/*
 {{unpack}}
+export BOOTSTRAP_RAP="yes"
 export LC_ALL=POSIX
 export MAKEOPTS="-j$(nproc) -l$(nproc)"
 {{build_steps}}
