FL-10630: additional build fixes for recent changes, and a PATH fix.
${CLFS}/bin should not be in the path until we enter fchroot, since
it contains binaries for the target architecture, not the host
arch. This has been fixed in the template.

--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -8,7 +8,8 @@ set -x
 umask 022
 install -d "${CLFS}/sources"
 install -d "${CLFS}/build"
-export PATH=${CLFS}/bin:${CLFS}/cross-tools/bin:/bin:/usr/bin
+# We may want to drop ${CLFS}/bin here, as it will contain tools for the non-native arch:
+export PATH=${CLFS}/cross-tools/bin:/bin:/usr/bin
 rm -rf "${CLFS}"/build/*
 {{unpack}}
 export LC_ALL=POSIX
